[package]
edition = "2021"
name = "delaunay_creator"
version = "0.2.5"
authors = ["nash1111 ken1251213@gmail.com"]
description = "delaunay triangulation for 2D and 3D(not implemented yet)"
readme = "README.md"
license-file = "LICENSE"

[dev-dependencies.plotters]
version = "0.3.3"

[dev-dependencies.rand]
version = "0.8.5"